app/route.yaml

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: spring-petclinic
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: petclinic.apps.sbx.gn2.ssc-ict.rijksapps.nl
      http:
        paths:
          - backend:
              service:
                name: spring-petclinic
                port:
                  number: 8080
            path: /
            pathType: Prefix
